Fix: z-index in main page

--- a/components/Actual/Actual.scss
+++ b/components/Actual/Actual.scss
@@ -1,6 +1,7 @@
 @import '~styles/vars';
 
 .actual {
+  z-index: 1;
   padding-top: 55px;
   padding-bottom: 157px;
   &_mt-minus {
