--- a/components/Cats/Cats.scss
+++ b/components/Cats/Cats.scss
@@ -1,7 +1,7 @@
 @import '~styles/vars';
 
 .cats {
-  // z-index: 2;
+  z-index: 2;
   position: relative;
   padding-top: 92px;
   &__wrap {
