--- a/components/Questions/Questions.scss
+++ b/components/Questions/Questions.scss
@@ -2,7 +2,7 @@
 
 .questions {
   // z-index: 5;
-  z-index: 1;
+  z-index: 3;
   position: relative;
   &_mt-minus {
     margin-top: -80px;
